# nengine

./: .gitignore  Makefile.am  configure.ac
assets/: fragment.glsl  gfxts1.json  gimp-palette.gpl  player.json  sprite.json  template.xcf  tilemap.json  tileset.json  tileset2.json  vertex.glsl
include/: stb_image.h
lib/: Makefile.am
lib/glew/: Makefile.am
lib/stb_image/: Makefile.am
src/: Makefile.am  asset.cpp  asset.h  audio.cpp  audio.h  bits.h  camera.cpp  camera.h  drawable.cpp  drawable.h  font.cpp  font.h  game.cpp  game.h  gamestate.cpp  gamestate.h  gl.h  image.cpp  image.h  input.cpp  input.h  main.cpp  megaman.cpp  megaman.h  nacl.cpp  osd.cpp  osd.h  overlay.cpp  overlay.h  renderer.cpp  renderer.h  resource.cpp  resource.h  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h  sound.cpp  sound.h  sprite.cpp  (+7 more)
